--- a/app/src/main/res/layout/fragment_repository_readme_dialog.xml
+++ b/app/src/main/res/layout/fragment_repository_readme_dialog.xml
@@ -19,6 +19,7 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:src="@drawable/close"
+            android:padding="4dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
