roomを用いたlocalDBへのI/O実装

--- a/app/src/main/res/layout/fragment_repository_readme_dialog.xml
+++ b/app/src/main/res/layout/fragment_repository_readme_dialog.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        tools:context=".repository.list.RepositoryReadmeDialogFragment">
+        tools:context=".repository.list.view.RepositoryReadmeDialogFragment">
 
     <WebView
             android:id="@+id/readMeBrowser"
