--- a/app/src/main/res/layout/layout_repository_row.xml
+++ b/app/src/main/res/layout/layout_repository_row.xml
@@ -3,18 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="data" type="com.example.repository.RepositoryData"/>
+        <variable name="data" type="com.example.repository.list.model.data.RepositoryData" />
         <variable name="clickListener" type="android.view.View.OnClickListener"/>
+        <variable name="isDark" type="Boolean"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:padding="8dp"
-            android:onClick="@{clickListener}">
+            android:onClick="@{clickListener}"
+            android:background="@{isDark ? @color/colorPrimaryDark : @color/colorPrimary}">
         <TextView
                 android:id="@+id/repositoryName"
                 android:text="@{data.name}"
+                android:textColor="@color/white"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
