--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#003d00</color>
     <color name="colorPrimaryLight">#629749</color>
     <color name="colorAccent">#ffb300</color>
+    <color name="white">#fff</color>
 </resources>
