--- a/app/src/main/res/layout/repository_list_fragment.xml
+++ b/app/src/main/res/layout/repository_list_fragment.xml
@@ -27,12 +27,25 @@
                 android:id="@+id/noDataText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no_data"
+                android:text="@string/repository_list_no_data"
                 android:textSize="14sp"
                 android:textColor="@color/white"
                 android:visibility="gone"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+                android:id="@+id/back"
+                android:textSize="14sp"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:text="@string/repository_list_back"
+                android:background="@drawable/material_window_light_green"
+                android:layout_marginTop="20dp"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/noDataText"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
